ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - jenkins.company.com
      secretName: jenkins-tls

  rules:
    - host: jenkins.company.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-service
                port:
                  number: 8080


# 2. Create TLS Secret (SSL)
# kubectl create secret tls jenkins-tls \
#   --cert=cert.crt \
#   --key=key.key \
#   -n jenkins
